all functional is rdy! next time -> refactor

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -17,6 +17,11 @@ caption {
 .transactionsTable td{
     width: 600px;
 }
+
+.betsTable td {
+    width: 1200px;
+}
+
 .loginBody {
     background-image: url("../img/background.jpg");
 }
